// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ModifiedSqlAuditResult index should render without crashing when no dataSource is provided 1`] = `
<div>
  <div
    class="ant-segmented basic-segmented-wrapper css-192b3m1 ant-segmented-block css-dev-only-do-not-override-txh9fw"
  >
    <div
      class="ant-segmented-group"
    />
  </div>
  <div
    class="ant-list ant-list-vertical css-dev-only-do-not-override-txh9fw"
  >
    <div
      class="ant-spin-nested-loading css-dev-only-do-not-override-txh9fw"
    >
      <div
        class="ant-spin-container"
      >
        <div
          class="ant-list-empty-text"
        >
          <div
            class="css-dev-only-do-not-override-txh9fw ant-empty ant-empty-normal"
          >
            <div
              class="ant-empty-image"
            >
              <svg
                height="41"
                viewBox="0 0 64 41"
                width="64"
                xmlns="http://www.w3.org/2000/svg"
              >
                <g
                  fill="none"
                  fill-rule="evenodd"
                  transform="translate(0 1)"
                >
                  <ellipse
                    cx="32"
                    cy="33"
                    fill="#f5f5f5"
                    rx="32"
                    ry="7"
                  />
                  <g
                    fill-rule="nonzero"
                    stroke="#d9d9d9"
                  >
                    <path
                      d="M55 12.76L44.854 1.258C44.367.474 43.656 0 42.907 0H21.093c-.749 0-1.46.474-1.947 1.257L9 12.761V22h46v-9.24z"
                    />
                    <path
                      d="M41.613 15.931c0-1.605.994-2.93 2.227-2.931H55v18.137C55 33.26 53.68 35 52.05 35h-40.1C10.32 35 9 33.259 9 31.137V13h11.16c1.233 0 2.227 1.323 2.227 2.928v.022c0 1.605 1.005 2.901 2.237 2.901h14.752c1.232 0 2.237-1.308 2.237-2.913v-.007z"
                      fill="#fafafa"
                    />
                  </g>
                </g>
              </svg>
            </div>
            <div
              class="ant-empty-description"
            >
              No data
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ModifiedSqlAuditResult index should set the activeTabKey to the first schema_name in dataSource on initial render if dataSource is provided 1`] = `
<div>
  <div
    class="ant-segmented basic-segmented-wrapper css-192b3m1 ant-segmented-block css-dev-only-do-not-override-txh9fw"
  >
    <div
      class="ant-segmented-group"
    >
      <label
        class="ant-segmented-item ant-segmented-item-selected"
      >
        <input
          class="ant-segmented-item-input"
          type="radio"
        />
        <div
          class="ant-segmented-item-label"
          title="MySQL-Test-01.schema_name1"
        >
          <div
            class="ant-space css-dev-only-do-not-override-txh9fw ant-space-horizontal ant-space-align-center"
            data-testid="schema_name1"
          >
            <div
              class="ant-space-item"
              style="margin-right: 4px;"
            >
              <span
                class="css-u3jcp4"
              >
                <svg
                  color="#4583ff"
                  height="16"
                  viewBox="0 0 18 18"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M15.75 7.125v2.25c0 1.864-3.023 3.375-6.75 3.375s-6.75-1.511-6.75-3.375v-2.25C2.25 8.989 5.273 10.5 9 10.5s6.75-1.511 6.75-3.375m-13.5 3.75c0 1.864 3.023 3.375 6.75 3.375s6.75-1.511 6.75-3.375v2.25c0 1.864-3.023 3.375-6.75 3.375s-6.75-1.511-6.75-3.375zM9 9C5.273 9 2.25 7.489 2.25 5.625S5.273 2.25 9 2.25s6.75 1.511 6.75 3.375S12.727 9 9 9"
                    fill="currentColor"
                  />
                </svg>
              </span>
            </div>
            <div
              class="ant-space-item"
            >
              MySQL-Test-01-schema_name1
            </div>
          </div>
        </div>
      </label>
      <label
        class="ant-segmented-item"
      >
        <input
          class="ant-segmented-item-input"
          type="radio"
        />
        <div
          class="ant-segmented-item-label"
          title="MySQL-Test-01.schema_name2"
        >
          <div
            class="ant-space css-dev-only-do-not-override-txh9fw ant-space-horizontal ant-space-align-center"
            data-testid="schema_name2"
          >
            <div
              class="ant-space-item"
              style="margin-right: 4px;"
            >
              <span
                class="css-u3jcp4"
              >
                <svg
                  color="#4583ff"
                  height="16"
                  viewBox="0 0 18 18"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M15.75 7.125v2.25c0 1.864-3.023 3.375-6.75 3.375s-6.75-1.511-6.75-3.375v-2.25C2.25 8.989 5.273 10.5 9 10.5s6.75-1.511 6.75-3.375m-13.5 3.75c0 1.864 3.023 3.375 6.75 3.375s6.75-1.511 6.75-3.375v2.25c0 1.864-3.023 3.375-6.75 3.375s-6.75-1.511-6.75-3.375zM9 9C5.273 9 2.25 7.489 2.25 5.625S5.273 2.25 9 2.25s6.75 1.511 6.75 3.375S12.727 9 9 9"
                    fill="currentColor"
                  />
                </svg>
              </span>
            </div>
            <div
              class="ant-space-item"
            >
              MySQL-Test-01-schema_name2
            </div>
          </div>
        </div>
      </label>
      <label
        class="ant-segmented-item"
      >
        <input
          class="ant-segmented-item-input"
          type="radio"
        />
        <div
          class="ant-segmented-item-label"
          title="MySQL-Test-01.schema_name3"
        >
          <div
            class="ant-space css-dev-only-do-not-override-txh9fw ant-space-horizontal ant-space-align-center"
            data-testid="schema_name3"
          >
            <div
              class="ant-space-item"
              style="margin-right: 4px;"
            >
              <span
                class="css-u3jcp4"
              >
                <svg
                  color="#4583ff"
                  height="16"
                  viewBox="0 0 18 18"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M15.75 7.125v2.25c0 1.864-3.023 3.375-6.75 3.375s-6.75-1.511-6.75-3.375v-2.25C2.25 8.989 5.273 10.5 9 10.5s6.75-1.511 6.75-3.375m-13.5 3.75c0 1.864 3.023 3.375 6.75 3.375s6.75-1.511 6.75-3.375v2.25c0 1.864-3.023 3.375-6.75 3.375s-6.75-1.511-6.75-3.375zM9 9C5.273 9 2.25 7.489 2.25 5.625S5.273 2.25 9 2.25s6.75 1.511 6.75 3.375S12.727 9 9 9"
                    fill="currentColor"
                  />
                </svg>
              </span>
            </div>
            <div
              class="ant-space-item"
            >
              MySQL-Test-01-schema_name3
            </div>
          </div>
        </div>
      </label>
    </div>
  </div>
  <div
    class="ant-list ant-list-vertical css-dev-only-do-not-override-txh9fw"
  >
    <div
      class="ant-spin-nested-loading css-dev-only-do-not-override-txh9fw"
    >
      <div
        class="ant-spin-container"
      >
        <ul
          class="ant-list-items"
        >
          <li
            class="ant-list-item ant-list-item-no-flex"
          >
            <div
              class="ant-card ant-card-bordered css-dqueji css-dev-only-do-not-override-txh9fw"
            >
              <div
                class="ant-card-body"
              >
                <div
                  class="css-tpr742"
                >
                  <div
                    class="title-text"
                  >
                    变更语句
                  </div>
                </div>
                <div
                  class="actiontech-sql-renderer-wrapper css-dz7fl9"
                >
                  <pre>
                    <code>
                      <div
                        class="code-line"
                      >
                        <span
                          class="code-line-number"
                        >
                          1
                        </span>
                        USE sqle;
                      </div>
                      <div
                        class="code-line"
                      >
                        <span
                          class="code-line-number"
                        >
                          2
                        </span>
                      </div>
                    </code>
                  </pre>
                </div>
                <div
                  class="ant-collapse ant-collapse-icon-position-start css-1ohn871 css-dev-only-do-not-override-txh9fw"
                >
                  <div
                    class="ant-collapse-item ant-collapse-item-active"
                  >
                    <div
                      aria-disabled="false"
                      aria-expanded="true"
                      class="ant-collapse-header"
                      role="button"
                      tabindex="0"
                    >
                      <div
                        class="ant-collapse-expand-icon"
                      >
                        <span
                          aria-label="right"
                          class="anticon anticon-right ant-collapse-arrow"
                          role="img"
                        >
                          <svg
                            aria-hidden="true"
                            data-icon="right"
                            fill="currentColor"
                            focusable="false"
                            height="1em"
                            style="transform: rotate(90deg);"
                            viewBox="64 64 896 896"
                            width="1em"
                          >
                            <path
                              d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
                            />
                          </svg>
                        </span>
                      </div>
                      <span
                        class="ant-collapse-header-text"
                      >
                        变更SQL语句审核结果
                      </span>
                    </div>
                    <div
                      class="ant-collapse-content ant-collapse-content-active"
                    >
                      <div
                        class="ant-collapse-content-box"
                      >
                        <div
                          class="result-item css-1avyf41"
                        >
                          <span
                            class="icon-wrapper"
                          >
                            <svg
                              height="20"
                              viewBox="0 0 20 20"
                              width="20"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                d="M10 18.333a8.333 8.333 0 1 1 0-16.666 8.333 8.333 0 1 1 0 16.666m-.83-5 5.89-5.892-1.177-1.178-4.714 4.714-2.357-2.358-1.179 1.179z"
                                fill="#41BF9A"
                              />
                            </svg>
                          </span>
                          <span
                            class="text-wrapper"
                          >
                            审核通过
                          </span>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </li>
          <li
            class="ant-list-item ant-list-item-no-flex"
          >
            <div
              class="ant-card ant-card-bordered css-dqueji css-dev-only-do-not-override-txh9fw"
            >
              <div
                class="ant-card-body"
              >
                <div
                  class="css-tpr742"
                >
                  <div
                    class="title-text"
                  >
                    变更语句
                  </div>
                </div>
                <div
                  class="actiontech-sql-renderer-wrapper css-dz7fl9"
                >
                  <pre>
                    <code>
                      <div
                        class="code-line"
                      >
                        <span
                          class="code-line-number"
                        >
                          1
                        </span>
                        <span
                          class="hljs-keyword"
                        >
                          DROP
                        </span>
                         
                        <span
                          class="hljs-keyword"
                        >
                          TABLE
                        </span>
                         \`audit_files\`;
                      </div>
                      <div
                        class="code-line"
                      >
                        <span
                          class="code-line-number"
                        >
                          2
                        </span>
                      </div>
                    </code>
                  </pre>
                </div>
                <div
                  class="ant-collapse ant-collapse-icon-position-start css-1ohn871 css-dev-only-do-not-override-txh9fw"
                >
                  <div
                    class="ant-collapse-item ant-collapse-item-active"
                  >
                    <div
                      aria-disabled="false"
                      aria-expanded="true"
                      class="ant-collapse-header"
                      role="button"
                      tabindex="0"
                    >
                      <div
                        class="ant-collapse-expand-icon"
                      >
                        <span
                          aria-label="right"
                          class="anticon anticon-right ant-collapse-arrow"
                          role="img"
                        >
                          <svg
                            aria-hidden="true"
                            data-icon="right"
                            fill="currentColor"
                            focusable="false"
                            height="1em"
                            style="transform: rotate(90deg);"
                            viewBox="64 64 896 896"
                            width="1em"
                          >
                            <path
                              d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
                            />
                          </svg>
                        </span>
                      </div>
                      <span
                        class="ant-collapse-header-text"
                      >
                        变更SQL语句审核结果
                      </span>
                    </div>
                    <div
                      class="ant-collapse-content ant-collapse-content-active"
                    >
                      <div
                        class="ant-collapse-content-box"
                      >
                        <div
                          class="ant-spin-nested-loading css-dev-only-do-not-override-txh9fw"
                        >
                          <div
                            class="ant-spin-container"
                          >
                            <div
                              class="css-181j9vh"
                            >
                              <div
                                class="result-item css-1v03opz"
                              >
                                <div
                                  class="css-1avyf41"
                                >
                                  <span
                                    class="icon-wrapper"
                                  >
                                    <svg
                                      height="20"
                                      viewBox="0 0 16 16"
                                      width="20"
                                      xmlns="http://www.w3.org/2000/svg"
                                    >
                                      <path
                                        d="M8 14.666A6.666 6.666 0 1 1 8 1.333a6.666 6.666 0 0 1 0 13.333m0-7.609L6.115 5.171l-.944.943L7.057 8 5.171 9.885l.944.943L8 8.942l1.885 1.886.944-.943L8.943 8l1.886-1.886-.944-.943z"
                                        fill="#F66074"
                                      />
                                    </svg>
                                  </span>
                                  <span
                                    class="text-wrapper"
                                  >
                                    禁止除索引外的DROP操作
                                  </span>
                                </div>
                                <div
                                  class="annotation-wrapper"
                                >
                                  <a
                                    class="ant-typography css-dev-only-do-not-override-txh9fw"
                                    href="/sqle/rule/knowledge/ddl_disable_drop_statement/MySQL"
                                    rel="noopener noreferrer"
                                    target="_blank"
                                  >
                                    查看更多
                                  </a>
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </li>
          <li
            class="ant-list-item ant-list-item-no-flex"
          >
            <div
              class="ant-card ant-card-bordered css-dqueji css-dev-only-do-not-override-txh9fw"
            >
              <div
                class="ant-card-body"
              >
                <div
                  class="css-tpr742"
                >
                  <div
                    class="title-text"
                  >
                    变更语句
                  </div>
                </div>
                <div
                  class="actiontech-sql-renderer-wrapper css-dz7fl9"
                >
                  <pre>
                    <code>
                      <div
                        class="code-line"
                      >
                        <span
                          class="code-line-number"
                        >
                          1
                        </span>
                        <span
                          class="hljs-keyword"
                        >
                          DROP
                        </span>
                         
                        <span
                          class="hljs-keyword"
                        >
                          TABLE
                        </span>
                         \`audit_plan_report_sqls_v2\`;
                      </div>
                      <div
                        class="code-line"
                      >
                        <span
                          class="code-line-number"
                        >
                          2
                        </span>
                      </div>
                    </code>
                  </pre>
                </div>
                <div
                  class="ant-collapse ant-collapse-icon-position-start css-1ohn871 css-dev-only-do-not-override-txh9fw"
                >
                  <div
                    class="ant-collapse-item"
                  >
                    <div
                      aria-disabled="false"
                      aria-expanded="false"
                      class="ant-collapse-header"
                      role="button"
                      tabindex="0"
                    >
                      <div
                        class="ant-collapse-expand-icon"
                      >
                        <span
                          aria-label="right"
                          class="anticon anticon-right ant-collapse-arrow"
                          role="img"
                        >
                          <svg
                            aria-hidden="true"
                            data-icon="right"
                            fill="currentColor"
                            focusable="false"
                            height="1em"
                            viewBox="64 64 896 896"
                            width="1em"
                          >
                            <path
                              d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
                            />
                          </svg>
                        </span>
                      </div>
                      <span
                        class="ant-collapse-header-text"
                      >
                        变更SQL语句审核结果
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </li>
        </ul>
      </div>
    </div>
  </div>
</div>
`;

exports[`ModifiedSqlAuditResult index should update the activeTabKey and re-render the component when a new tab is selected 1`] = `
<div>
  <div
    class="ant-segmented basic-segmented-wrapper css-192b3m1 ant-segmented-block css-dev-only-do-not-override-txh9fw"
  >
    <div
      class="ant-segmented-group"
    >
      <label
        class="ant-segmented-item"
      >
        <input
          class="ant-segmented-item-input"
          type="radio"
        />
        <div
          class="ant-segmented-item-label"
          title="MySQL-Test-01.schema_name1"
        >
          <div
            class="ant-space css-dev-only-do-not-override-txh9fw ant-space-horizontal ant-space-align-center"
            data-testid="schema_name1"
          >
            <div
              class="ant-space-item"
              style="margin-right: 4px;"
            >
              <span
                class="css-u3jcp4"
              >
                <svg
                  color="#4583ff"
                  height="16"
                  viewBox="0 0 18 18"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M15.75 7.125v2.25c0 1.864-3.023 3.375-6.75 3.375s-6.75-1.511-6.75-3.375v-2.25C2.25 8.989 5.273 10.5 9 10.5s6.75-1.511 6.75-3.375m-13.5 3.75c0 1.864 3.023 3.375 6.75 3.375s6.75-1.511 6.75-3.375v2.25c0 1.864-3.023 3.375-6.75 3.375s-6.75-1.511-6.75-3.375zM9 9C5.273 9 2.25 7.489 2.25 5.625S5.273 2.25 9 2.25s6.75 1.511 6.75 3.375S12.727 9 9 9"
                    fill="currentColor"
                  />
                </svg>
              </span>
            </div>
            <div
              class="ant-space-item"
            >
              MySQL-Test-01-schema_name1
            </div>
          </div>
        </div>
      </label>
      <label
        class="ant-segmented-item ant-segmented-item-selected"
      >
        <input
          class="ant-segmented-item-input"
          type="radio"
        />
        <div
          class="ant-segmented-item-label"
          title="MySQL-Test-01.schema_name2"
        >
          <div
            class="ant-space css-dev-only-do-not-override-txh9fw ant-space-horizontal ant-space-align-center"
            data-testid="schema_name2"
          >
            <div
              class="ant-space-item"
              style="margin-right: 4px;"
            >
              <span
                class="css-u3jcp4"
              >
                <svg
                  color="#4583ff"
                  height="16"
                  viewBox="0 0 18 18"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M15.75 7.125v2.25c0 1.864-3.023 3.375-6.75 3.375s-6.75-1.511-6.75-3.375v-2.25C2.25 8.989 5.273 10.5 9 10.5s6.75-1.511 6.75-3.375m-13.5 3.75c0 1.864 3.023 3.375 6.75 3.375s6.75-1.511 6.75-3.375v2.25c0 1.864-3.023 3.375-6.75 3.375s-6.75-1.511-6.75-3.375zM9 9C5.273 9 2.25 7.489 2.25 5.625S5.273 2.25 9 2.25s6.75 1.511 6.75 3.375S12.727 9 9 9"
                    fill="currentColor"
                  />
                </svg>
              </span>
            </div>
            <div
              class="ant-space-item"
            >
              MySQL-Test-01-schema_name2
            </div>
          </div>
        </div>
      </label>
      <label
        class="ant-segmented-item"
      >
        <input
          class="ant-segmented-item-input"
          type="radio"
        />
        <div
          class="ant-segmented-item-label"
          title="MySQL-Test-01.schema_name3"
        >
          <div
            class="ant-space css-dev-only-do-not-override-txh9fw ant-space-horizontal ant-space-align-center"
            data-testid="schema_name3"
          >
            <div
              class="ant-space-item"
              style="margin-right: 4px;"
            >
              <span
                class="css-u3jcp4"
              >
                <svg
                  color="#4583ff"
                  height="16"
                  viewBox="0 0 18 18"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M15.75 7.125v2.25c0 1.864-3.023 3.375-6.75 3.375s-6.75-1.511-6.75-3.375v-2.25C2.25 8.989 5.273 10.5 9 10.5s6.75-1.511 6.75-3.375m-13.5 3.75c0 1.864 3.023 3.375 6.75 3.375s6.75-1.511 6.75-3.375v2.25c0 1.864-3.023 3.375-6.75 3.375s-6.75-1.511-6.75-3.375zM9 9C5.273 9 2.25 7.489 2.25 5.625S5.273 2.25 9 2.25s6.75 1.511 6.75 3.375S12.727 9 9 9"
                    fill="currentColor"
                  />
                </svg>
              </span>
            </div>
            <div
              class="ant-space-item"
            >
              MySQL-Test-01-schema_name3
            </div>
          </div>
        </div>
      </label>
    </div>
  </div>
  <div
    class="ant-list ant-list-vertical css-dev-only-do-not-override-txh9fw"
  >
    <div
      class="ant-spin-nested-loading css-dev-only-do-not-override-txh9fw"
    >
      <div
        class="ant-spin-container"
      >
        <ul
          class="ant-list-items"
        >
          <li
            class="ant-list-item ant-list-item-no-flex"
          >
            <div
              class="ant-card ant-card-bordered css-dqueji css-dev-only-do-not-override-txh9fw"
            >
              <div
                class="ant-card-body"
              >
                <div
                  class="css-tpr742"
                >
                  <div
                    class="title-text"
                  >
                    变更语句
                  </div>
                </div>
                <div
                  class="actiontech-sql-renderer-wrapper css-dz7fl9"
                >
                  <pre>
                    <code>
                      <div
                        class="code-line"
                      >
                        <span
                          class="code-line-number"
                        >
                          1
                        </span>
                        USE sqle;
                      </div>
                      <div
                        class="code-line"
                      >
                        <span
                          class="code-line-number"
                        >
                          2
                        </span>
                      </div>
                    </code>
                  </pre>
                </div>
                <div
                  class="ant-collapse ant-collapse-icon-position-start css-1ohn871 css-dev-only-do-not-override-txh9fw"
                >
                  <div
                    class="ant-collapse-item ant-collapse-item-active"
                  >
                    <div
                      aria-disabled="false"
                      aria-expanded="true"
                      class="ant-collapse-header"
                      role="button"
                      tabindex="0"
                    >
                      <div
                        class="ant-collapse-expand-icon"
                      >
                        <span
                          aria-label="right"
                          class="anticon anticon-right ant-collapse-arrow"
                          role="img"
                        >
                          <svg
                            aria-hidden="true"
                            data-icon="right"
                            fill="currentColor"
                            focusable="false"
                            height="1em"
                            style="transform: rotate(90deg);"
                            viewBox="64 64 896 896"
                            width="1em"
                          >
                            <path
                              d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
                            />
                          </svg>
                        </span>
                      </div>
                      <span
                        class="ant-collapse-header-text"
                      >
                        变更SQL语句审核结果
                      </span>
                    </div>
                    <div
                      class="ant-collapse-content ant-collapse-content-active"
                    >
                      <div
                        class="ant-collapse-content-box"
                      >
                        <div
                          class="result-item css-1avyf41"
                        >
                          <span
                            class="icon-wrapper"
                          >
                            <svg
                              height="20"
                              viewBox="0 0 20 20"
                              width="20"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                d="M10 18.333a8.333 8.333 0 1 1 0-16.666 8.333 8.333 0 1 1 0 16.666m-.83-5 5.89-5.892-1.177-1.178-4.714 4.714-2.357-2.358-1.179 1.179z"
                                fill="#41BF9A"
                              />
                            </svg>
                          </span>
                          <span
                            class="text-wrapper"
                          >
                            审核通过
                          </span>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </li>
          <li
            class="ant-list-item ant-list-item-no-flex"
          >
            <div
              class="ant-card ant-card-bordered css-dqueji css-dev-only-do-not-override-txh9fw"
            >
              <div
                class="ant-card-body"
              >
                <div
                  class="css-tpr742"
                >
                  <div
                    class="title-text"
                  >
                    变更语句
                  </div>
                </div>
                <div
                  class="actiontech-sql-renderer-wrapper css-dz7fl9"
                >
                  <pre>
                    <code>
                      <div
                        class="code-line"
                      >
                        <span
                          class="code-line-number"
                        >
                          1
                        </span>
                        <span
                          class="hljs-keyword"
                        >
                          DROP
                        </span>
                         
                        <span
                          class="hljs-keyword"
                        >
                          TABLE
                        </span>
                         \`audit_files\`;
                      </div>
                      <div
                        class="code-line"
                      >
                        <span
                          class="code-line-number"
                        >
                          2
                        </span>
                      </div>
                    </code>
                  </pre>
                </div>
                <div
                  class="ant-collapse ant-collapse-icon-position-start css-1ohn871 css-dev-only-do-not-override-txh9fw"
                >
                  <div
                    class="ant-collapse-item ant-collapse-item-active"
                  >
                    <div
                      aria-disabled="false"
                      aria-expanded="true"
                      class="ant-collapse-header"
                      role="button"
                      tabindex="0"
                    >
                      <div
                        class="ant-collapse-expand-icon"
                      >
                        <span
                          aria-label="right"
                          class="anticon anticon-right ant-collapse-arrow"
                          role="img"
                        >
                          <svg
                            aria-hidden="true"
                            data-icon="right"
                            fill="currentColor"
                            focusable="false"
                            height="1em"
                            style="transform: rotate(90deg);"
                            viewBox="64 64 896 896"
                            width="1em"
                          >
                            <path
                              d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
                            />
                          </svg>
                        </span>
                      </div>
                      <span
                        class="ant-collapse-header-text"
                      >
                        变更SQL语句审核结果
                      </span>
                    </div>
                    <div
                      class="ant-collapse-content ant-collapse-content-active"
                    >
                      <div
                        class="ant-collapse-content-box"
                      >
                        <div
                          class="ant-spin-nested-loading css-dev-only-do-not-override-txh9fw"
                        >
                          <div
                            class="ant-spin-container"
                          >
                            <div
                              class="css-181j9vh"
                            >
                              <div
                                class="result-item css-1v03opz"
                              >
                                <div
                                  class="css-1avyf41"
                                >
                                  <span
                                    class="icon-wrapper"
                                  >
                                    <svg
                                      height="20"
                                      viewBox="0 0 16 16"
                                      width="20"
                                      xmlns="http://www.w3.org/2000/svg"
                                    >
                                      <path
                                        d="M8 14.666A6.666 6.666 0 1 1 8 1.333a6.666 6.666 0 0 1 0 13.333m0-7.609L6.115 5.171l-.944.943L7.057 8 5.171 9.885l.944.943L8 8.942l1.885 1.886.944-.943L8.943 8l1.886-1.886-.944-.943z"
                                        fill="#F66074"
                                      />
                                    </svg>
                                  </span>
                                  <span
                                    class="text-wrapper"
                                  >
                                    禁止除索引外的DROP操作
                                  </span>
                                </div>
                                <div
                                  class="annotation-wrapper"
                                >
                                  <a
                                    class="ant-typography css-dev-only-do-not-override-txh9fw"
                                    href="/sqle/rule/knowledge/ddl_disable_drop_statement/MySQL"
                                    rel="noopener noreferrer"
                                    target="_blank"
                                  >
                                    查看更多
                                  </a>
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </li>
          <li
            class="ant-list-item ant-list-item-no-flex"
          >
            <div
              class="ant-card ant-card-bordered css-dqueji css-dev-only-do-not-override-txh9fw"
            >
              <div
                class="ant-card-body"
              >
                <div
                  class="css-tpr742"
                >
                  <div
                    class="title-text"
                  >
                    变更语句
                  </div>
                </div>
                <div
                  class="actiontech-sql-renderer-wrapper css-dz7fl9"
                >
                  <pre>
                    <code>
                      <div
                        class="code-line"
                      >
                        <span
                          class="code-line-number"
                        >
                          1
                        </span>
                        <span
                          class="hljs-keyword"
                        >
                          DROP
                        </span>
                         
                        <span
                          class="hljs-keyword"
                        >
                          TABLE
                        </span>
                         \`audit_plan_report_sqls_v2\`;
                      </div>
                      <div
                        class="code-line"
                      >
                        <span
                          class="code-line-number"
                        >
                          2
                        </span>
                      </div>
                    </code>
                  </pre>
                </div>
                <div
                  class="ant-collapse ant-collapse-icon-position-start css-1ohn871 css-dev-only-do-not-override-txh9fw"
                >
                  <div
                    class="ant-collapse-item"
                  >
                    <div
                      aria-disabled="false"
                      aria-expanded="false"
                      class="ant-collapse-header"
                      role="button"
                      tabindex="0"
                    >
                      <div
                        class="ant-collapse-expand-icon"
                      >
                        <span
                          aria-label="right"
                          class="anticon anticon-right ant-collapse-arrow"
                          role="img"
                        >
                          <svg
                            aria-hidden="true"
                            data-icon="right"
                            fill="currentColor"
                            focusable="false"
                            height="1em"
                            viewBox="64 64 896 896"
                            width="1em"
                          >
                            <path
                              d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
                            />
                          </svg>
                        </span>
                      </div>
                      <span
                        class="ant-collapse-header-text"
                      >
                        变更SQL语句审核结果
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </li>
        </ul>
      </div>
    </div>
  </div>
</div>
`;

exports[`ModifiedSqlAuditResult list should render the correct number of list items based on the dataSource length 1`] = `
<div>
  <div
    class="ant-list ant-list-vertical css-dev-only-do-not-override-txh9fw"
  >
    <div
      class="ant-spin-nested-loading css-dev-only-do-not-override-txh9fw"
    >
      <div
        class="ant-spin-container"
      >
        <ul
          class="ant-list-items"
        >
          <li
            class="ant-list-item ant-list-item-no-flex"
          >
            <div
              class="ant-card ant-card-bordered css-dqueji css-dev-only-do-not-override-txh9fw"
            >
              <div
                class="ant-card-body"
              >
                <div
                  class="css-tpr742"
                >
                  <div
                    class="title-text"
                  >
                    变更语句
                  </div>
                </div>
                <div
                  class="actiontech-sql-renderer-wrapper css-dz7fl9"
                >
                  <pre>
                    <code>
                      <div
                        class="code-line"
                      >
                        <span
                          class="code-line-number"
                        >
                          1
                        </span>
                        USE sqle;
                      </div>
                      <div
                        class="code-line"
                      >
                        <span
                          class="code-line-number"
                        >
                          2
                        </span>
                      </div>
                    </code>
                  </pre>
                </div>
                <div
                  class="ant-collapse ant-collapse-icon-position-start css-1ohn871 css-dev-only-do-not-override-txh9fw"
                >
                  <div
                    class="ant-collapse-item ant-collapse-item-active"
                  >
                    <div
                      aria-disabled="false"
                      aria-expanded="true"
                      class="ant-collapse-header"
                      role="button"
                      tabindex="0"
                    >
                      <div
                        class="ant-collapse-expand-icon"
                      >
                        <span
                          aria-label="right"
                          class="anticon anticon-right ant-collapse-arrow"
                          role="img"
                        >
                          <svg
                            aria-hidden="true"
                            data-icon="right"
                            fill="currentColor"
                            focusable="false"
                            height="1em"
                            style="transform: rotate(90deg);"
                            viewBox="64 64 896 896"
                            width="1em"
                          >
                            <path
                              d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
                            />
                          </svg>
                        </span>
                      </div>
                      <span
                        class="ant-collapse-header-text"
                      >
                        变更SQL语句审核结果
                      </span>
                    </div>
                    <div
                      class="ant-collapse-content ant-collapse-content-active"
                    >
                      <div
                        class="ant-collapse-content-box"
                      >
                        <div
                          class="result-item css-1avyf41"
                        >
                          <span
                            class="icon-wrapper"
                          >
                            <svg
                              height="20"
                              viewBox="0 0 20 20"
                              width="20"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                d="M10 18.333a8.333 8.333 0 1 1 0-16.666 8.333 8.333 0 1 1 0 16.666m-.83-5 5.89-5.892-1.177-1.178-4.714 4.714-2.357-2.358-1.179 1.179z"
                                fill="#41BF9A"
                              />
                            </svg>
                          </span>
                          <span
                            class="text-wrapper"
                          >
                            审核通过
                          </span>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </li>
          <li
            class="ant-list-item ant-list-item-no-flex"
          >
            <div
              class="ant-card ant-card-bordered css-dqueji css-dev-only-do-not-override-txh9fw"
            >
              <div
                class="ant-card-body"
              >
                <div
                  class="css-tpr742"
                >
                  <div
                    class="title-text"
                  >
                    变更语句
                  </div>
                </div>
                <div
                  class="actiontech-sql-renderer-wrapper css-dz7fl9"
                >
                  <pre>
                    <code>
                      <div
                        class="code-line"
                      >
                        <span
                          class="code-line-number"
                        >
                          1
                        </span>
                        <span
                          class="hljs-keyword"
                        >
                          DROP
                        </span>
                         
                        <span
                          class="hljs-keyword"
                        >
                          TABLE
                        </span>
                         \`audit_files\`;
                      </div>
                      <div
                        class="code-line"
                      >
                        <span
                          class="code-line-number"
                        >
                          2
                        </span>
                      </div>
                    </code>
                  </pre>
                </div>
                <div
                  class="ant-collapse ant-collapse-icon-position-start css-1ohn871 css-dev-only-do-not-override-txh9fw"
                >
                  <div
                    class="ant-collapse-item ant-collapse-item-active"
                  >
                    <div
                      aria-disabled="false"
                      aria-expanded="true"
                      class="ant-collapse-header"
                      role="button"
                      tabindex="0"
                    >
                      <div
                        class="ant-collapse-expand-icon"
                      >
                        <span
                          aria-label="right"
                          class="anticon anticon-right ant-collapse-arrow"
                          role="img"
                        >
                          <svg
                            aria-hidden="true"
                            data-icon="right"
                            fill="currentColor"
                            focusable="false"
                            height="1em"
                            style="transform: rotate(90deg);"
                            viewBox="64 64 896 896"
                            width="1em"
                          >
                            <path
                              d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
                            />
                          </svg>
                        </span>
                      </div>
                      <span
                        class="ant-collapse-header-text"
                      >
                        变更SQL语句审核结果
                      </span>
                    </div>
                    <div
                      class="ant-collapse-content ant-collapse-content-active"
                    >
                      <div
                        class="ant-collapse-content-box"
                      >
                        <div
                          class="ant-spin-nested-loading css-dev-only-do-not-override-txh9fw"
                        >
                          <div
                            class="ant-spin-container"
                          >
                            <div
                              class="css-181j9vh"
                            >
                              <div
                                class="result-item css-1v03opz"
                              >
                                <div
                                  class="css-1avyf41"
                                >
                                  <span
                                    class="icon-wrapper"
                                  >
                                    <svg
                                      height="20"
                                      viewBox="0 0 16 16"
                                      width="20"
                                      xmlns="http://www.w3.org/2000/svg"
                                    >
                                      <path
                                        d="M8 14.666A6.666 6.666 0 1 1 8 1.333a6.666 6.666 0 0 1 0 13.333m0-7.609L6.115 5.171l-.944.943L7.057 8 5.171 9.885l.944.943L8 8.942l1.885 1.886.944-.943L8.943 8l1.886-1.886-.944-.943z"
                                        fill="#F66074"
                                      />
                                    </svg>
                                  </span>
                                  <span
                                    class="text-wrapper"
                                  >
                                    禁止除索引外的DROP操作
                                  </span>
                                </div>
                                <div
                                  class="annotation-wrapper"
                                >
                                  <a
                                    class="ant-typography css-dev-only-do-not-override-txh9fw"
                                    href="/sqle/rule/knowledge/ddl_disable_drop_statement/MySQL"
                                    rel="noopener noreferrer"
                                    target="_blank"
                                  >
                                    查看更多
                                  </a>
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </li>
          <li
            class="ant-list-item ant-list-item-no-flex"
          >
            <div
              class="ant-card ant-card-bordered css-dqueji css-dev-only-do-not-override-txh9fw"
            >
              <div
                class="ant-card-body"
              >
                <div
                  class="css-tpr742"
                >
                  <div
                    class="title-text"
                  >
                    变更语句
                  </div>
                </div>
                <div
                  class="actiontech-sql-renderer-wrapper css-dz7fl9"
                >
                  <pre>
                    <code>
                      <div
                        class="code-line"
                      >
                        <span
                          class="code-line-number"
                        >
                          1
                        </span>
                        <span
                          class="hljs-keyword"
                        >
                          DROP
                        </span>
                         
                        <span
                          class="hljs-keyword"
                        >
                          TABLE
                        </span>
                         \`audit_plan_report_sqls_v2\`;
                      </div>
                      <div
                        class="code-line"
                      >
                        <span
                          class="code-line-number"
                        >
                          2
                        </span>
                      </div>
                    </code>
                  </pre>
                </div>
                <div
                  class="ant-collapse ant-collapse-icon-position-start css-1ohn871 css-dev-only-do-not-override-txh9fw"
                >
                  <div
                    class="ant-collapse-item"
                  >
                    <div
                      aria-disabled="false"
                      aria-expanded="false"
                      class="ant-collapse-header"
                      role="button"
                      tabindex="0"
                    >
                      <div
                        class="ant-collapse-expand-icon"
                      >
                        <span
                          aria-label="right"
                          class="anticon anticon-right ant-collapse-arrow"
                          role="img"
                        >
                          <svg
                            aria-hidden="true"
                            data-icon="right"
                            fill="currentColor"
                            focusable="false"
                            height="1em"
                            viewBox="64 64 896 896"
                            width="1em"
                          >
                            <path
                              d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
                            />
                          </svg>
                        </span>
                      </div>
                      <span
                        class="ant-collapse-header-text"
                      >
                        变更SQL语句审核结果
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </li>
        </ul>
      </div>
    </div>
  </div>
</div>
`;

exports[`ModifiedSqlAuditResult list should render without crashing when no dataSource is provided 1`] = `
<div>
  <div
    class="ant-list ant-list-vertical css-dev-only-do-not-override-txh9fw"
  >
    <div
      class="ant-spin-nested-loading css-dev-only-do-not-override-txh9fw"
    >
      <div
        class="ant-spin-container"
      >
        <div
          class="ant-list-empty-text"
        >
          <div
            class="css-dev-only-do-not-override-txh9fw ant-empty ant-empty-normal"
          >
            <div
              class="ant-empty-image"
            >
              <svg
                height="41"
                viewBox="0 0 64 41"
                width="64"
                xmlns="http://www.w3.org/2000/svg"
              >
                <g
                  fill="none"
                  fill-rule="evenodd"
                  transform="translate(0 1)"
                >
                  <ellipse
                    cx="32"
                    cy="33"
                    fill="#f5f5f5"
                    rx="32"
                    ry="7"
                  />
                  <g
                    fill-rule="nonzero"
                    stroke="#d9d9d9"
                  >
                    <path
                      d="M55 12.76L44.854 1.258C44.367.474 43.656 0 42.907 0H21.093c-.749 0-1.46.474-1.947 1.257L9 12.761V22h46v-9.24z"
                    />
                    <path
                      d="M41.613 15.931c0-1.605.994-2.93 2.227-2.931H55v18.137C55 33.26 53.68 35 52.05 35h-40.1C10.32 35 9 33.259 9 31.137V13h11.16c1.233 0 2.227 1.323 2.227 2.928v.022c0 1.605 1.005 2.901 2.237 2.901h14.752c1.232 0 2.237-1.308 2.237-2.913v-.007z"
                      fill="#fafafa"
                    />
                  </g>
                </g>
              </svg>
            </div>
            <div
              class="ant-empty-description"
            >
              No data
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
